wow_gcs custom merge_hard.13

--- a/custom/CMakeLists.txt
+++ b/custom/CMakeLists.txt
@@ -1,3 +1,5 @@
+cmake_minimum_required(VERSION 3.22.1)
+
 message(STATUS "Adding Custom Plugin")
 find_package(Qt6 REQUIRED COMPONENTS Core)
 
@@ -12,15 +14,16 @@ set_property(DIRECTORY ${CMAKE_SOURCE_DIR}
 find_package(Python)
 if(PYTHON_FOUND)
     execute_process(
-        COMMAND ${PYTHON_EXECUTABLE}
+        COMMAND ${PYTHON_EXECUTABLE} updateqrc.py
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
         RESULT_VARIABLE PYTHON_RESULT
         OUTPUT_VARIABLE PYTHON_OUTPUT
         ERROR_VARIABLE PYTHON_ERROR
-        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-        INPUT_FILE updateqrc.py
         OUTPUT_STRIP_TRAILING_WHITESPACE
     )
-    cmake_print_variables(RESULT_VARIABLE OUTPUT_VARIABLE ERROR_VARIABLE)
+    message(STATUS "Python script result: ${PYTHON_RESULT}")
+    message(STATUS "Python script output: ${PYTHON_OUTPUT}")
+    message(WARNING "Python script error: ${PYTHON_ERROR}")
 endif()
 
 # Our own, custom resources
@@ -67,6 +70,7 @@ target_include_directories(CustomPlugin
         ${CMAKE_CURRENT_SOURCE_DIR}/src/FirmwarePlugin
 )
 
+# qt_add_qml_module은 필요한 경우 주석을 해제하여 사용하십시오
 # file(GLOB_RECURSE QML_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/res/*.qml)
 # file(GLOB QML_RESOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/res/Images/*.*)
 # qt_add_qml_module(CustomPlugin
